Update Paint App: add layers, SVG icons, new tools & UI components
- Add LayerManager, Layer, LayerState, CanvasSnapshot for multi-layer support
- Replace PNG tool icons with SVG variants (brush, bucket, eraser, eyedropper, hand, pencil, selection, zoom)
- Add ToolSpec enum and PassiveTool; remove HandTool and ZoomTool classes
- Add new UI components: ClearAction, ConfirmDialog, HsvPickerSquare, HueStrip, LayerPanel, Panels, RgbSlidersView
- Add SelectionOrigin for selection tracking
- Update ColorHistory, ColorManager, CanvasManager, FileManager, AppController
- Update selection subsystem: SelectionController, SelectionOverlay, SelectionInteractionMode, ResizeHandle
- Update all tools: BrushTool, EraserTool, EyeDropperTool, FillTool, PencilTool, SelectionTool, SizedTool, Tool, ToolManager
- Update UI: AppMenuBar, CanvasViewport, ColorHistoryPanel, ColorPickerPanel, MainWindow, OptionsBar, SidePanel, StatusBar, ToolIcons, ToolPanel, ToolSettingsContainer, ToolSettingsView, styles.css
- Remove obsolete ImageLoader; update .gitignore, sources.txt, run config

Co-authored-by: Junie <junie@jetbrains.com>