@@ -1,25 +1,21 @@
 package com.martinpaint.selection;
 
 import com.martinpaint.canvas.CanvasManager;
+import com.martinpaint.canvas.Layer;
 import javafx.geometry.Rectangle2D;
 import javafx.scene.SnapshotParameters;
 import javafx.scene.canvas.GraphicsContext;
 import javafx.scene.image.WritableImage;
 import javafx.scene.paint.Color;
-import javafx.scene.transform.Scale;
 
-import java.util.function.DoubleSupplier;
-
-// Orchestrates the full selection lifecycle: IDLE > DEFINING > FLOATING > (MOVING / RESIZING) > commit / cancel / delete.
+/** Orchestrates the full selection lifecycle: IDLE > DEFINING > FLOATING > (MOVING / RESIZING) > commit / cancel / delete. */
 public class SelectionController {
 
     private static final double MIN_SELECTION_SIZE = 2.0;
 
     private final CanvasManager    canvasManager;
     private final SelectionOverlay overlay;
-    private final ClipboardService clipboard;
-    // Supplies the current viewport zoom so pickup can snapshot at 1:1 pixel resolution
-    private final DoubleSupplier   viewportScale;
+    private final ClipboardService clipboard = new ClipboardService();
 
     private SelectionInteractionMode mode = SelectionInteractionMode.IDLE;
     private Selection selection;
@@ -41,21 +37,20 @@ public class SelectionController {
     // Cached canvas size.
     private double cachedCanvasW, cachedCanvasH;
 
-    public SelectionController(CanvasManager canvasManager, SelectionOverlay overlay,
-                               ClipboardService clipboard, DoubleSupplier viewportScale) {
+    public SelectionController(CanvasManager canvasManager, SelectionOverlay overlay) {
         this.canvasManager  = canvasManager;
         this.overlay        = overlay;
-        this.clipboard      = clipboard;
-        this.viewportScale  = viewportScale;
+    }
 
+    public void attachOverlayInteraction() {
         overlay.wireInteraction(
                 this::onResizeStarted,
-                xy -> onCanvasDragged(xy[0], xy[1]),
+                this::onCanvasDragged,
                 this::onResizeEnded
         );
     }
 
-// Public state queries
+    // ── Public state queries ──────────────────────────────────────────────────
 
     public boolean hasFloat() {
         return selection != null &&
@@ -64,7 +59,7 @@ public class SelectionController {
                 mode == SelectionInteractionMode.RESIZING);
     }
 
-// Canvas mouse events (forwarded from SelectionTool)
+    // ── Canvas mouse events (forwarded from SelectionTool) ───────────────────
 
     public void onCanvasPressed(double x, double y) {
         switch (mode) {
@@ -109,7 +104,7 @@ public class SelectionController {
         }
     }
 
-// Resize handle callbacks
+    // ── Resize handle callbacks ───────────────────────────────────────────────
 
     private void onResizeStarted(ResizeHandle handle) {
         if (mode != SelectionInteractionMode.FLOATING) return;
@@ -132,7 +127,7 @@ public class SelectionController {
         }
     }
 
-// Defining the selection area
+    // ── Defining the selection area ───────────────────────────────────────────
 
     private void startDefining(double x, double y) {
         defineStartX = x;
@@ -142,14 +137,20 @@ public class SelectionController {
     }
 
     private void updateMarquee(double x, double y) {
-        double[] r = normalizeRect(defineStartX, defineStartY, x, y);
-        overlay.showMarquee(r[0], r[1], r[2], r[3]);
+        overlay.showMarquee(
+                Math.min(defineStartX, x),
+                Math.min(defineStartY, y),
+                Math.abs(x - defineStartX),
+                Math.abs(y - defineStartY));
     }
 
     private void finishDefining(double x, double y) {
-        double[] r = normalizeRect(defineStartX, defineStartY, x, y);
+        double minX = Math.min(defineStartX, x);
+        double minY = Math.min(defineStartY, y);
+        double width = Math.abs(x - defineStartX);
+        double height = Math.abs(y - defineStartY);
 
-        if (r[2] < MIN_SELECTION_SIZE || r[3] < MIN_SELECTION_SIZE) {
+        if (width < MIN_SELECTION_SIZE || height < MIN_SELECTION_SIZE) {
             overlay.hide();
             mode = SelectionInteractionMode.IDLE;
             return;
@@ -157,10 +158,10 @@ public class SelectionController {
 
         double cw = canvasManager.getCanvas().getWidth();
         double ch = canvasManager.getCanvas().getHeight();
-        double rx = clamp(r[0], 0, cw);
-        double ry = clamp(r[1], 0, ch);
-        double rw = clamp(r[2], 0, cw - rx);
-        double rh = clamp(r[3], 0, ch - ry);
+        double rx = Math.clamp(minX, 0, cw);
+        double ry = Math.clamp(minY, 0, ch);
+        double rw = Math.clamp(width, 0, cw - rx);
+        double rh = Math.clamp(height, 0, ch - ry);
 
         if (rw < MIN_SELECTION_SIZE || rh < MIN_SELECTION_SIZE) {
             overlay.hide();
@@ -171,37 +172,34 @@ public class SelectionController {
         pickup(rx, ry, rw, rh);
     }
 
-// Lift pixels from canvas to floating layer
+    // ── Lift pixels from canvas to floating layer ─────────────────────────────
 
     private void pickup(double x, double y, double w, double h) {
         canvasManager.saveStateForUndo();
 
-        // The canvas node has a Scale transform applied by the viewport.
-        // snapshot() would capture scaled output, making the region appear smaller and offset.
-        // We invert the canvas scale in SnapshotParameters so the snapshot reads true canvas pixels.
-        double s = viewportScale.getAsDouble();
         SnapshotParameters params = new SnapshotParameters();
         // Transparent fill so untouched (un-painted) regions stay transparent in the float image.
         params.setFill(Color.TRANSPARENT);
-        params.setTransform(new Scale(1.0 / s, 1.0 / s));
         params.setViewport(new Rectangle2D(x, y, w, h));
         int iw = Math.max(1, (int) Math.round(w));
         int ih = Math.max(1, (int) Math.round(h));
-        WritableImage floatImg = canvasManager.getCanvas().snapshot(params, new WritableImage(iw, ih));
+        Layer sourceLayer = canvasManager.getLayerManager().getActiveLayer();
+        WritableImage floatImg = sourceLayer.snapshot(params, new WritableImage(iw, ih));
 
         // Erase the source area on the drawing layer.
-        GraphicsContext gc = canvasManager.getGraphicsContext();
+        GraphicsContext gc = sourceLayer.getGc();
         gc.clearRect(x, y, w, h);
+        canvasManager.markDrawingChanged();
 
         Rectangle2D bounds = new Rectangle2D(x, y, w, h);
-        selection = new Selection(bounds, floatImg);
+        selection = new Selection(bounds, floatImg, SelectionOrigin.LIFTED, sourceLayer);
         cachedCanvasW = canvasManager.getCanvas().getWidth();
         cachedCanvasH = canvasManager.getCanvas().getHeight();
         mode = SelectionInteractionMode.FLOATING;
         overlay.showFloat(selection);
     }
 
-// Moving the selection
+    // ── Moving the selection ──────────────────────────────────────────────────
 
     private void updateMove(double x, double y) {
         if (!moveDragInitialized) {
@@ -215,8 +213,8 @@ public class SelectionController {
         double dx = x - movePressX;
         double dy = y - movePressY;
         Rectangle2D old = selection.getFloatBounds();
-        double newX = clamp(moveOriginX + dx, 0, cachedCanvasW - old.getWidth());
-        double newY = clamp(moveOriginY + dy, 0, cachedCanvasH - old.getHeight());
+        double newX = clampPosition(moveOriginX + dx, old.getWidth(), cachedCanvasW);
+        double newY = clampPosition(moveOriginY + dy, old.getHeight(), cachedCanvasH);
 
         selection = selection.withFloatBounds(new Rectangle2D(newX, newY, old.getWidth(), old.getHeight()));
         overlay.updateFloatBounds(selection.getFloatBounds());
@@ -229,7 +227,7 @@ public class SelectionController {
         }
     }
 
-// Resizing the selection
+    // ── Resizing the selection ────────────────────────────────────────────────
 
     private void updateResize(double x, double y) {
         if (activeHandle == null || selection == null) return;
@@ -257,35 +255,42 @@ public class SelectionController {
         }
 
         // Clamp to canvas bounds
-        newMinX = clamp(newMinX, 0, cachedCanvasW);
-        newMinY = clamp(newMinY, 0, cachedCanvasH);
-        newW    = clamp(newW, 1, cachedCanvasW - newMinX);
-        newH    = clamp(newH, 1, cachedCanvasH - newMinY);
+        newMinX = Math.clamp(newMinX, 0, cachedCanvasW);
+        newMinY = Math.clamp(newMinY, 0, cachedCanvasH);
+        newW    = Math.clamp(newW, 1, cachedCanvasW - newMinX);
+        newH    = Math.clamp(newH, 1, cachedCanvasH - newMinY);
 
         selection = selection.withFloatBounds(new Rectangle2D(newMinX, newMinY, newW, newH));
         overlay.updateFloatBounds(selection.getFloatBounds());
     }
 
-// Commit / cancel / delete operations
+    // ── Commit / cancel / delete operations ──────────────────────────────────
 
     //Stamps the float onto the canvas at its current position.
     public void commit() {
         if (selection == null) { reset(); return; }
+        if (selection.getOrigin() == SelectionOrigin.PASTED) {
+            canvasManager.saveStateForUndo();
+        }
         Rectangle2D b = selection.getFloatBounds();
-        canvasManager.getGraphicsContext()
-                     .drawImage(selection.getFloatImage(),
-                                b.getMinX(), b.getMinY(), b.getWidth(), b.getHeight());
+        selectionGraphicsContext()
+                .drawImage(selection.getFloatImage(),
+                        b.getMinX(), b.getMinY(), b.getWidth(), b.getHeight());
+        canvasManager.markDrawingChanged();
         reset();
     }
 
     // Puts original pixels back exactly where they were lifted, then resets.
     public void cancel() {
         if (selection == null) { reset(); return; }
-        Rectangle2D ob = selection.getOriginalBounds();
-        canvasManager.getGraphicsContext()
-                     .drawImage(selection.getFloatImage(),
-                                ob.getMinX(), ob.getMinY(),
-                                ob.getWidth(), ob.getHeight());
+        if (selection.getOrigin() == SelectionOrigin.LIFTED) {
+            Rectangle2D ob = selection.getOriginalBounds();
+            selectionGraphicsContext()
+                    .drawImage(selection.getFloatImage(),
+                            ob.getMinX(), ob.getMinY(),
+                            ob.getWidth(), ob.getHeight());
+            canvasManager.discardLastUndoState();
+        }
         reset();
     }
 
@@ -295,7 +300,7 @@ public class SelectionController {
         reset();
     }
 
-// Clipboard operations
+    // ── Clipboard operations ──────────────────────────────────────────────────
 
     public void copy() {
         if (selection != null) clipboard.copy(selection.getFloatImage());
@@ -318,29 +323,29 @@ public class SelectionController {
         double cw = canvasManager.getCanvas().getWidth();
         double ch = canvasManager.getCanvas().getHeight();
         double pw = img.getWidth(), ph = img.getHeight();
-        double px = clamp((cw - pw) / 2.0, 0, cw - pw);
-        double py = clamp((ch - ph) / 2.0, 0, ch - ph);
+        double px = clampPosition((cw - pw) / 2.0, pw, cw);
+        double py = clampPosition((ch - ph) / 2.0, ph, ch);
 
         Rectangle2D bounds = new Rectangle2D(px, py, pw, ph);
-        selection = new Selection(bounds, img);
+        selection = new Selection(bounds, img, SelectionOrigin.PASTED);
         cachedCanvasW = cw;
         cachedCanvasH = ch;
         mode = SelectionInteractionMode.FLOATING;
         overlay.showFloat(selection);
     }
 
-// Keyboard nudge movement
+    // ── Keyboard nudge movement ───────────────────────────────────────────────
 
     public void nudge(double dx, double dy) {
         if (!hasFloat()) return;
         Rectangle2D b = selection.getFloatBounds();
-        double newX = clamp(b.getMinX() + dx, 0, cachedCanvasW - b.getWidth());
-        double newY = clamp(b.getMinY() + dy, 0, cachedCanvasH - b.getHeight());
+        double newX = clampPosition(b.getMinX() + dx, b.getWidth(), cachedCanvasW);
+        double newY = clampPosition(b.getMinY() + dy, b.getHeight(), cachedCanvasH);
         selection = selection.withFloatBounds(new Rectangle2D(newX, newY, b.getWidth(), b.getHeight()));
         overlay.updateFloatBounds(selection.getFloatBounds());
     }
 
-// Reset state
+    // ── Reset state ───────────────────────────────────────────────────────────
 
     public void reset() {
         selection           = null;
@@ -350,16 +355,14 @@ public class SelectionController {
         overlay.hide();
     }
 
-// Utilities
+    // ── Utilities ─────────────────────────────────────────────────────────────
 
-    private static double[] normalizeRect(double x1, double y1, double x2, double y2) {
-        return new double[]{
-            Math.min(x1, x2), Math.min(y1, y2),
-            Math.abs(x2 - x1), Math.abs(y2 - y1)
-        };
+    private double clampPosition(double value, double size, double limit) {
+        return Math.clamp(value, 0, Math.max(0, limit - size));
     }
 
-    private static double clamp(double v, double lo, double hi) {
-        return Math.max(lo, Math.min(hi, v));
+    private GraphicsContext selectionGraphicsContext() {
+        Layer sourceLayer = selection.getSourceLayer();
+        return sourceLayer == null ? canvasManager.getGraphicsContext() : sourceLayer.getGc();
     }
 }
